# conway-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/conway/: events.h  game_of_life.h  init.h  render.h  sdl_wrapper.h  view.h  window.h
src/: events.cpp  game_of_life.cpp  init.cpp  main.cpp  render.cpp  sdl_wrapper.cpp  view.cpp  window.cpp
